Fixed SVG element CSS for size
In Firefox the default SVG size is too small to display anything useful
Now we have a useful default

--- a/src/css/knowledge-graph.less
+++ b/src/css/knowledge-graph.less
@@ -8,6 +8,11 @@
 @line-color: darken(@color, 30%);
 @line-width: 2px;
 
+svg {
+	width: 100%;
+	height: 800px;
+}
+
 text {
   font-family: 'Fira', sans-serif;
   fill: @label-text-color;
